[gd_scene load_steps=7 format=2]

[ext_resource path="res://challenges/week7/scenes/city/city.tscn" type="PackedScene" id=1]
[ext_resource path="res://challenges/week7/scenes/map/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://challenges/week7/scenes/main.gd" type="Script" id=3]
[ext_resource path="res://challenges/week7/scenes/language/language.tscn" type="PackedScene" id=4]
[ext_resource path="res://challenges/week7/scenes/diedMessage.gd" type="Script" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -12.0869, -50, 0, 0, 0, 0, 1052.28, -63.6943, 0, 0, 0, 0, 1050.33, 624.935, 0, 0, 0, 0, -0.347511, 621.022, 0, 0, 0, 0, -12.0869, -50 )
}

[node name="main" type="Node"]
script = ExtResource( 3 )

[node name="map" parent="." instance=ExtResource( 2 )]

[node name="city" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 290 )

[node name="words" type="Node2D" parent="."]

[node name="language" parent="." instance=ExtResource( 4 )]

[node name="createWordTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnZone" type="Path2D" parent="."]
position = Vector2( -23.6448, 1.11607 )
scale = Vector2( 1.0222, 1.02232 )
curve = SubResource( 1 )

[node name="SpawnPoints" type="PathFollow2D" parent="SpawnZone"]
position = Vector2( -12.0869, -50 )
rotation = -0.0128671

[node name="diedMessage" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="diedMessage"]
margin_left = -20.0
margin_top = -15.0
margin_right = 1042.0
margin_bottom = 619.0
color = Color( 0.345098, 0.054902, 0.0235294, 0.615686 )

[node name="Label" type="Label" parent="diedMessage"]
margin_left = -20.0
margin_top = 252.0
margin_right = 1042.0
margin_bottom = 266.0
text = "Game over!"
align = 1

[node name="Button" type="Button" parent="diedMessage"]
margin_left = 468.0
margin_top = 286.0
margin_right = 556.0
margin_bottom = 316.0
text = "Try again"

[connection signal="died" from="city" to="." method="_on_city_died"]
[connection signal="language_selected" from="language" to="." method="_on_language_language_selected"]
[connection signal="timeout" from="createWordTimer" to="." method="_on_createWordTimer_timeout"]
[connection signal="pressed" from="diedMessage/Button" to="diedMessage" method="_on_Button_pressed"]
